--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Frontend Mentor | Four card feature section</title>
 </head>
 <body>
-  <div class="container mt-5">
+  <main class="container mt-5">
     <div class="row">
       <div class="col-12 text-center">
         <h1>Reliable, efficient delivery</h1>
@@ -23,32 +23,32 @@
     <div class="row">
       <div class="col-lg-4 col-md-12">
         <div class="card cyan ">
-          <h3>Supervisor</h3>
+          <h2>Supervisor</h2>
           <p>Monitors activity to identify project roadblocks</p>
           <img src="assets/images/icon-supervisor.svg" alt="supervisor-icon">
         </div>
       </div>
       <div class="col-lg-4 col-md-12">
         <div class="card red">
-          <h3>Team Builder</h3>
+          <h2>Team Builder</h2>
           <p>Scans our talent network to create the optimal team for your project</p>
           <img src="assets/images/icon-team-builder.svg" alt="team-builder-icon">
         </div>
         <div class="card orange">
-          <h3>Karma</h3>
+          <h2>Karma</h2>
           <p>Regularly evaluates our talent to ensure quality</p>
           <img src="assets/images/icon-karma.svg" alt="karma-icon">
         </div>
       </div>
       <div class="col-lg-4 col-md-12">
         <div class="card blue">
-          <h3>Calculator</h3>
+          <h2>Calculator</h2>
           <p>Uses data from past projects to provide better delivery estimates</p>
           <img src="assets/images/icon-calculator.svg" alt="calculator-icon">
         </div>
       </div>
     </div>
-  </div>
+  </main>
   
   <footer>
     <p class="attribution">
